<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <TextView
        android:id="@+id/msgPerdeu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/msgPerdeu" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/bt_sair" />

        <Button
            android:id="@+id/btnJogarNovamente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/bt_jogarNovamente" />

        <Button
            android:id="@+id/btnTelaCategoria2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_categoria" />

    </LinearLayout>
    

</LinearLayout>
