<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#00FF7F"
    tools:context=".SobreActivity" >

    <TextView
        android:id="@+id/tvSobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="83dp"
        android:text="@string/tv_sobre"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvSobreTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSobre"
        android:layout_below="@+id/tvSobre"
        android:layout_marginTop="40dp"
        android:textSize="20sp" 
        android:text="@string/tv_sobre_team"/>

    <TextView
        android:id="@+id/tvSobreRafaela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSobreTeam"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="20sp" 
        android:text="@string/tv_rafaela"/>

    <TextView
        android:id="@+id/tvSobreAdilio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSobreRafaela"
        android:layout_below="@+id/tvSobreRafaela"
        android:layout_marginTop="20dp"
        android:textSize="20sp" 
        android:text="@string/tv_adilio"/>

    <TextView
        android:id="@+id/tvSobreDanilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSobreAdilio"
        android:layout_below="@+id/tvSobreAdilio"
        android:layout_marginTop="16dp"
        android:textSize="20sp" 
        android:text="@string/tv_danilo"/>

</RelativeLayout>
