<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtPerguntaSair"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/txtPerguntaSair" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.28"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnContinuar" />

        <Button
            android:id="@+id/btnTerminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnTerminar" />

    </LinearLayout>

</LinearLayout>